--- a/app/index.html
+++ b/app/index.html
@@ -15,13 +15,31 @@
     <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
   </head>
   <body>
     <div class="main">
-
+        <header>
+          <nav>
+            <ul>
+              <li>
+                <div>Home</div>
+                <div><img src="/images/icon-home.png" alt="home" /></div>
+              </li>
+              <li>
+                <div>Analyse</div>
+                <div><img src="/images/icon-home.png" alt="home" /></div>
+              </li>
+            </ul>
+          </nav>
+          <div>
+            <h1 class="underline">New Collection AW Connected clothing <span></span></h1>
+          </div>
+        </header>
     </div>
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
