home basic styles

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>techniveille</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -15,7 +15,7 @@
     <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -27,17 +27,23 @@
           <nav>
             <ul>
               <li>
-                <div>Home</div>
-                <div><img src="/images/icon-home.png" alt="home" /></div>
+                <div class="nav-label">Home</div>
+                <div class="nav-icon">
+                  <img src="/images/icon-home.png" alt="home" />
+                </div>
               </li>
               <li>
-                <div>Analyse</div>
-                <div><img src="/images/icon-home.png" alt="home" /></div>
+                <div class="nav-icon"><img src="/images/icon-home.png" alt="home" /></div>
+                <div class="nav-label">Analyse</div>
               </li>
             </ul>
           </nav>
-          <div>
-            <h1 class="underline">New Collection AW Connected clothing <span></span></h1>
+          <div class="header-content">
+            <div class="header-content-inner">
+              <h1 class="underline">New Collection AW<span></span></h1>
+              <h2 class="underline">Connected clothing <span></span></h2>
+              <p class="white">RAPPEL DU SUJET... Lorem Ipsum dolor aet nuc hinc hoc Dolor est eros conLorem Ipsum dolor aet nuc hinc hoc Lorem Ipsum dolor aet nuc hinc hoc Dolor est eros conLorem Ipsum dolor aet...</p>
+            </div>
           </div>
         </header>
     </div>
