--- a/app/index.html
+++ b/app/index.html
@@ -23,29 +23,43 @@
   </head>
   <body>
     <div class="main">
-        <header>
-          <nav>
-            <ul>
-              <li>
-                <div class="nav-label">Home</div>
-                <div class="nav-icon">
-                  <img src="/images/icon-home.png" alt="home" />
-                </div>
-              </li>
-              <li>
-                <div class="nav-icon"><img src="/images/icon-home.png" alt="home" /></div>
-                <div class="nav-label">Analyse</div>
-              </li>
-            </ul>
-          </nav>
-          <div class="header-content">
-            <div class="header-content-inner">
-              <h1 class="underline">New Collection AW<span></span></h1>
-              <h2 class="underline">Connected clothing <span></span></h2>
-              <p class="white">RAPPEL DU SUJET... Lorem Ipsum dolor aet nuc hinc hoc Dolor est eros conLorem Ipsum dolor aet nuc hinc hoc Lorem Ipsum dolor aet nuc hinc hoc Dolor est eros conLorem Ipsum dolor aet...</p>
+      <div class="purple-back">
+        <div class="wrapper">
+          <header>
+            <nav>
+              <ul>
+                <li>
+                  <div class="nav-label">Home</div>
+                  <div class="nav-icon">
+                    <img src="/images/icon-home.png" alt="home" />
+                  </div>
+                </li>
+                <li>
+                  <div class="nav-icon"><img src="/images/icon-home.png" alt="home" /></div>
+                  <div class="nav-label">Analyse</div>
+                </li>
+              </ul>
+            </nav>
+            <div class="header-content">
+              <div class="header-content-inner">
+                <h1 class="underline">New Collection AW<span></span></h1>
+                <h2 class="underline">Connected clothing <span></span></h2>
+                <p class="white">RAPPEL DU SUJET... Lorem Ipsum dolor aet nuc hinc hoc Dolor est eros conLorem Ipsum dolor aet nuc hinc hoc Lorem Ipsum dolor aet nuc hinc hoc Dolor est eros conLorem Ipsum dolor aet...</p>
+              </div>
             </div>
-          </div>
-        </header>
+            <div class="sticky-sources">
+              <a href="#">Sources</a>
+            </div>
+          </header>
+        </div>
+      </div>
+      <div class="wrapper">
+        <div class="timeline">
+          <!-- @TODO : sticky timeline purple -->
+        </div>
+        <div class="timeline-content">
+        </div>
+      </div>
     </div>
     <!--[if IE]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
