--- a/app/index.html
+++ b/app/index.html
@@ -84,7 +84,7 @@
     <script src="scripts/pixi.min.js"></script>
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <!-- build:js scripts/main.js -->
-    <!-- <script src="scripts/homeAnim.js"></script> -->
+    <script src="scripts/homeAnim.js"></script>
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
   </body>
