css improve and stuffs

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <!-- endbuild -->
 
     <!-- build:css styles/main.css -->
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="main">
-      <div class="purple-back">
+      <div id="mouseListener" class="purple-back">
         <div id="cloth"></div>
         <div class="wrapper">
           <header>
@@ -55,9 +55,6 @@
         </div>
       </div>
       <div class="wrapper">
-        <div class="timeline">
-          <!-- @TODO : sticky timeline purple -->
-        </div>
         <div class="timeline-content">
         </div>
       </div>
