--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,10 @@
       <div class="wrapper">
         <div class="timeline-content">
         </div>
+        <div class="mustHave">
+          <p>...</p>
+          <h3 class="mustHave-title big"><span>Our opinion</span><span>Must Have</span></h3>
+        </div>
       </div>
     </div>
     <!--[if IE]>
