--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500" rel="stylesheet">
     <link rel="stylesheet" href="styles/reset.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" media="print" href="styles/print.css"/>
+
     <!-- endbuild -->
 
   </head>
