--- a/app/index.html
+++ b/app/index.html
@@ -87,10 +87,8 @@
           <span> Wearables, a new trend or a real innovation ?</span>
         </p>
         <p>
-          Attracting a large pannel of person from different ages and profession, but mostly a young public <span>(most wearables users having between 25 and 35yo)</span> the subject seems to take a larger application in health issue. The users of wearables has doubled in the last few years, the proof of the expanding interest of the public. But Paradoxically enough <span>1/3 of the wearables users are gaving up their product,</span> qualifying them as disappointing, not answering their first need or expectation.
-  Those fact doesn’t bear witness on the non-viability of the sector, but on the contrary, <span>they  present the several progress and developpement</span>that the product can evoluate in.
+          Attracting a large pannel of person from different ages and profession, but mostly a young public <span>(most wearables users having between 25 and 35yo)</span> the subject seems to take a larger application in health issue. The users of wearables has doubled in the last few years, the proof of the expanding interest of the public. But Paradoxically enough <span>1/3 of the wearables users are gaving up their product,</span> qualifying them as disappointing, not answering their first need or expectation. Those fact doesn’t bear witness on the non-viability of the sector, but on the contrary, <span>they  present the several progress and developpement</span>that the product can evoluate in.
         </p>
-
         <p>
           <span>And several and promising</span> they are. With a huge rate of collecting data and acceptance of the users to do so, the wearables has a lot of potential. Not only on medical issues, but also in <span>safety, fashion, economical, exact measurement, prevention</span> and many others.
   <span>Your fabric can now help you to understand your body</span> / system and help you to adjust your activity around it. All the programs share the same interest; <span>YOU. They place the user at the heart of their system,</span> Allowing a more accurate customization of their offer. Concentrating on your very own well-being, they create personnal answers to your problematic. They seems to understand your need and to act on consequences, creating a valuable link of trust.<span> Doing so, the user are more inclined to share their data.</span> Even with all these quality, wearables suffer from a dependance to another device in which you can visualize your information.
@@ -106,11 +104,10 @@
   Even if the idea sems pleasing, connected and intelligent clothing are a little more complicated than that. They require an understanding of the <span>field of health as well as that of technology.</span> That’s why at first they seems attractive but are often not used at their most efficiency. (it also explain why 1/3 of people tend to give up their wearables after a short time of use). Another drawback is rightly expressed trough to the quote by Coco Channel : « Fashion goes, style remains ». The <span>frozen</span> aspect of the product often leads the user to <span>let it go.</span> When the technology are moving quickly, few can afford a fabric that will loose in efficacity as the time goes by…
   Even if the choices of those wearables are still limited, they tend to open themselves in a larger public in order to share those clothes as a new support of communication. <span>Always more self centred.</span>
         </p>
-            <p>
-              <span>The future seems bright for our wardrobe.</span> It keeps woving itself in order to solidarize the applications offered by the different range of connected clothes. Intelligent fabrics will certainly keep evolving and doing so, <span>they will open the field of possibilities for personalization of service and self-knowledge.</span>
-            </p>
-          </div>
-        </div>
+        <p>
+          <span>The future seems bright for our wardrobe.</span> It keeps woving itself in order to solidarize the applications offered by the different range of connected clothes. Intelligent fabrics will certainly keep evolving and doing so, <span>they will open the field of possibilities for personalization of service and self-knowledge.</span>
+        </p>
+      </div>
     </div>
 
     <!--[if IE]>
