--- a/app/index.html
+++ b/app/index.html
@@ -47,8 +47,8 @@
               <div class="header-content-inner">
                 <h1 class="underline">New Collection<span></span></h1>
                 <h2 class="underline">Connected clothing <span></span></h2>
-                <p class="white">Réalisée par les créateurs du Bachelor Designers et Développeurs Interactif cette collection présente les dernières nouveautés dans le domaine des vêtements connectés.
-                </br></br>Nous vous dévoilons les meilleurs pièces de cette collection créée en partenariat avec l’école Gobelins.</p>
+                <p class="white">Realized by Bachelor Designers et Développeurs Interactif fashion designer this collection shows the updates in the connected clothes area.
+                </br></br>We show you today the best pieces of this collection in partnership whith Gobelins school.</p>
               </div>
             </div>
             <div class="sticky-sources">
